--- a/calcu.css
+++ b/calcu.css
@@ -15,11 +15,11 @@ button{
     text-align: center;
     
     margin: 5px !important;
-    border: 0px;
+    
     border-radius: 10px !important;
     color: white;
     background-color: black;
-    box-shadow: 1px 1px 1px;
+    box-shadow: 0px 4px 5px;
   
     
 
@@ -29,6 +29,16 @@ button{
 
         height: 50px;
         width: 70px;
+
+
+
+    }
+}
+@media (max-width:420px){
+    input{
+
+       
+        width: 330px !important;
 
 
 
